fine consegna base

--- a/src/main/resources/templates/crea.html
+++ b/src/main/resources/templates/crea.html
@@ -22,7 +22,7 @@
 					<!-- aggiungo campi -->
 					<div class="mb-3">
 						<label class="form-label" for="nome">Nome</label>
-  				<input type="text" id="nome" class="form-control" th:field="*{nome}" >
+  				<input type="text" id="nome" class="form-control" th:field="*{nome}" th:errorClass="is-invalid" >
 					</div>
 					
 					<div class="mb - 3">
