aggiunta form ingredienti

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -30,6 +30,11 @@
 		       
 		      </ul>
 		    </div>
+		    <!-- aggiungi search qui e fai metodo nel controller di pizza-->
+		    	<form action="/search">
+		    	<input class="form-controll" type="text" name ="queryTitle">
+		    	<buttom>Search</buttom>
+		    	</form>
 		  </div>
 		</nav>
 		
