--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -59,5 +59,6 @@
   			</div>
   			<button type="submit" class="btn btn-primary">Save</button>
   			<a class="btn btn-primary" href="/pizza">Cancel</a>
+  			<a class="btn btn-primary" href="/ingredienti">Ingredienti</a>
   		</form>
 	
